--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
 			<ul class="contacts">
 				<li>
 					<a href="tel:+5531975287424">
-						<img src="img/smartphone-call.png" alt="" /> (31) 9 75287424
+						<img src="img/phone.svg" alt="" /> (31) 9 75287424
 					</a>
 				</li>
 				<li>
 					<a href="mailto:gabriel.costa949@gmail.com">
-						<img src="img/gmail-logo.png" alt="" /> gabriel.costa949@gmail.com
+						<img src="img/email.svg" alt="" /> gabriel.costa949@gmail.com
 					</a>
 				</li>
 				<li>
 					<a href="https://https://www.linkedin.com/in/gabriel-de-paula-752660142/" target="blank">
-						<img src="img/linkedin.png" alt="" /> Gabriel de Paula
+						<img src="img/linkedin.svg" alt="" /> Gabriel de Paula
 					</a>
 				</li>
 			</ul>
 		</div>
 		
 		<span class="scroll-btn">
-	<a href="#">
-		<span class="mouse">
-			<span>
-			</span>
-		</span>
-		</a>
+			<a href="#">
+				<span class="mouse">
+					<span>
+					</span>
+				</span>
+			</a>
 		</span>
 
 	</div>
