Imagem da parte de Formação

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 	</div>
 
 	<div class="sobre">
+		<div class="animated fadeln">
 		<img class="img-box" src="./img/kait-loggins-291456-min.jpg"/>
+		</div>
      <div class="article-box">
 		<article>
 				<h1 class="title">Sobre</h1>	
