Posição da Article-box

--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
 		</div>
 
 		<div class="sobre">
+			<article class="article col-sm-offset-1 col-md-offset-1">
+			
 			<div class="animated fadeln">
 				<img class="img-box" src="./img/kait-loggins-291456-min.jpg" />
 			</div>
 			<div class="article-box">
-				<div class="col-md-12">
-					<article>
+				
+					
 						<h1 class="title">Sobre</h1>
 						<p class="paragrafo">Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce
 							tellus odio, dapibus id, fermentum quis, suscipit id, erat. Fusce aliquam vestibulum ipsum. Aliquam erat volutpat.
