Article box responsivo

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<title>Gabriel Victor Oliveira de Paula Costa</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="css/style.css" rel="stylesheet">
+	
 	<link rel="stylesheet" href="vendors/animate.css">
 	<link rel="stylesheet" href="vendors/bootstrap.min.css">
+	<link href="css/style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
 </head>
@@ -16,30 +17,30 @@
 	<div class='container-fluid'>
 		<div class="row">
 			<div class="imag">
-				<div class="wow animated fadeInUp"  data-wow-duration="2s" data-wow-delay="1s">
-				<img id="foto" src="http://graph.facebook.com/100004999451297/picture?type=large">
+				<div class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
+					<img id="foto" src="http://graph.facebook.com/100004999451297/picture?type=large">
 
-				<h1 id="nome">Gabriel de Paula</h1>
+					<h1 id="nome">Gabriel de Paula</h1>
 
-				<div id="informacoes">
-					<ul class="contacts">
-						<li>
-							<a href="tel:+5531975287424">
+					<div id="informacoes">
+						<ul class="contacts">
+							<li>
+								<a href="tel:+5531975287424">
 						<img src="img/phone.svg" alt="" /> (31) 9 75287424
 					</a>
-						</li>
-						<li>
-							<a href="mailto:gabriel.costa949@gmail.com">
+							</li>
+							<li>
+								<a href="mailto:gabriel.costa949@gmail.com">
 						<img src="img/email.svg" alt="" /> gabriel.costa949@gmail.com
 					</a>
-						</li>
-						<li>
-							<a href="https://https://www.linkedin.com/in/gabriel-de-paula-752660142/" target="blank">
+							</li>
+							<li>
+								<a href="https://https://www.linkedin.com/in/gabriel-de-paula-752660142/" target="blank">
 						<img src="img/linkedin.svg" alt="" /> Gabriel de Paula
 					</a>
-						</li>
-					</ul>
-				</div>
+							</li>
+						</ul>
+					</div>
 				</div>
 				<span class="scroll-btn">
 			<a href="#">
@@ -53,95 +54,94 @@
 			</div>
 		</div>
 
-		<div class="sobre">
-			<article class="article col-sm-offset-1 col-md-offset-1">
-			
-			
+		
+			<article class="sobre col-sm-offset-1 col-md-offset-1">
+
+
 				<img class="img-box" src="./img/kait-loggins-291456-min.jpg" />
+
+				<div class="article-box">
+
+
+					<h1 class="title">Sobre</h1>
+					<p class="paragrafo">Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce
+						tellus odio, dapibus id, fermentum quis, suscipit id, erat. Fusce aliquam vestibulum ipsum. Aliquam erat volutpat.
+						Pellentesque sapien. Cras elementum. Nulla pulvinar eleifend sem. Cum sociis natoque penatibus et magnis dis parturient
+						montes, nascetur ridiculus mus. Quisque porta. Vivamus porttitor turpis ac leo.</p>
+
+
+			</article>
 			
-			<div class="article-box">
-				
-					
-						<h1 class="title">Sobre</h1>
-						<p class="paragrafo">Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce
-							tellus odio, dapibus id, fermentum quis, suscipit id, erat. Fusce aliquam vestibulum ipsum. Aliquam erat volutpat.
-							Pellentesque sapien. Cras elementum. Nulla pulvinar eleifend sem. Cum sociis natoque penatibus et magnis dis parturient
-							montes, nascetur ridiculus mus. Quisque porta. Vivamus porttitor turpis ac leo.</p>
-
-
-					</article>
-				</div>
-			</div>
 		</div>
-		<div class="formacao">
+	</div>
+	<div class="formacao">
 
-			<section id="formation">
+		<section id="formation">
 
-				<h2 class="title">Formação</h2>
-				<ul>
-					<li>
-						<a class="alinhar" href="www.pucminas.br">PUC Minhas - Bracharel em Sistemas de Informação <small>(2016)</small></a>
-						<p class="alinhar">Sed dictum velit mollis nulla lobortis bibendum. Morbi sit amet fermentum urna</p>
-					</li>
-			</section>
+			<h2 class="title">Formação</h2>
+			<ul>
+				<li>
+					<a class="alinhar" href="www.pucminas.br">PUC Minhas - Bracharel em Sistemas de Informação <small>(2016)</small></a>
+					<p class="alinhar">Sed dictum velit mollis nulla lobortis bibendum. Morbi sit amet fermentum urna</p>
+				</li>
+		</section>
 
+	</div>
+	<div class="conhecimento" id="conhec">
+
+		<section id="skills">
+			<h2 class="title" style='margin-bottom:40px;text-align:center;'>Conhecimentos</h2>
+
+			<p class="name-skill">HTML</p>
+			<progress value="0" max="100" data-valueto="40"></progress>
+
+
+			<p class="name-skill">CSS</p>
+			<progress value="0" max="100" data-valueto="30"></progress>
+
+
+			<p class="name-skill">JavaScript</p>
+			<progress value="0" max="100" data-valueto="35"></progress>
+
+
+			<p class="name-skill">Angular</p>
+			<progress value="0" max="100" data-valueto="25"></progress>
+
+			<p class="name-skill">C#</p>
+			<progress value="0" max="100" data-valueto="40"></progress>
+
+
+			<p class="name-skill">Java</p>
+			<progress value="0" max="100" data-valueto="20"></progress>
+
+
+			<p class="name-skill">MySQL</p>
+			<progress value="0" max="100" data-valueto="15"></progress>
+
+		</section>
+	</div>
+<div class="trabalhos">
+	<h2 class="title" style='text-align:center;'>GitHub</h2>
+			<hr/>
+
+		<div id="git">
+			
 		</div>
-		<div class="conhecimento">
 
-			<section id="skills">
-				<h2 class="title" style='margin-bottom:40px;text-align:center;'>Conhecimentos</h2>
-
-				<p class="name-skill">HTML</p>
-				<progress value="80" max="100"></progress>
-
-
-				<p class="name-skill">CSS</p>
-				<progress value="70" max="100"></progress>
-
-
-				<p class="name-skill">JavaScript</p>
-				<progress value="60" max="100"></progress>
-
-
-				<p class="name-skill">Angular</p>
-				<progress value="70" max="100"></progress>
-
-				<p class="name-skill">C#</p>
-				<progress value="60" max="100"></progress>
-
-
-				<p class="name-skill">Java</p>
-				<progress value="80" max="100"></progress>
-
-
-				<p class="name-skill">MySQL</p>
-				<progress value="80" max="100"></progress>
-
-			</section>
-		</div>
-		<div class="footer">
-			<footer>
-				&copy; 2017 - Gabriel de Paula
-			</footer>
-		</div>
+	</div>	
+			
+		</section>
+	<div class="footer">
+		<footer>
+			&copy; 2017 - Gabriel de Paula
+		</footer>
+	</div>
 	</div>
 	<div class="row">
 		<script src="vendors/jquery.min.js"></script>
 		<script src='vendors/jquery-ui.min.js'></script>
 		<script src='vendors/wow.min.js'></script>
-		<script>
-			new WOW().init();
-			window.addEventListener("scroll", function (event) {
-				if (pageYOffset = 100) {
-					$(function () {
-						$('progress').each(function () {
-							var max = $(this).val();
-							$(this).val(0).animate({ value: max }, { duration: 2000, easing: 'easeOutCirc' });
-						});
-					});
-				}
-			});
-		</script>
+		<script src="js/main.js"></script>
 </body>
 
 </html>
